--- a/freelancers/templates/login.html
+++ b/freelancers/templates/login.html
@@ -28,10 +28,10 @@
   
   <body>
   
-    <div class="navbar-wrapper">
+   <div class="navbar-wrapper">
       <div class="container">
 
-        <nav class="navbar navbar-inverse navbar-static-top">
+        <nav class="navbar navbar-default navbar-static-top">
           <div class="container">
             <div class="navbar-header">
               <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
@@ -46,10 +46,13 @@
             <div id="navbar" class="navbar-collapse collapse">
               <ul class="nav navbar-nav">
               
-                <li><a href="#">Home</a></li>              
+                <li><a href="{% url "home" %}">Home</a></li>              
                   {% if user.is_authenticated %}
-		  <li><a href="{% url "posting-list" %}">View Posts</a></li>
-		  <li><a href="{% url "new-post" %}">Make a new Posting</a></li>                  
+      <li><a href="{% url "item_upload" %}">Sell a new item</a></li> 
+      <li><a href="{% url "your-item-list" %}">View your store</a></li>                  
+      <li><a href="{% url "item-list" %}">View items being sold</a></li>                                         
+      <li><a href="{% url "posting-list" %}">View Posts</a></li>
+      <li><a href="{% url "new-post" %}">Make a new Posting</a></li>                  
                   <li> <a href="{% url "user_logout" %}">Logout {{user}}</a></li>
                   {%else%}
                  <li class="active"><a href="{% url "user_login" %}">Login</a></li>
@@ -63,6 +66,13 @@
 
       </div>
     </div>
+
+      </div>
+    </div>
+
+<div class="col-md-2">
+</div>
+<div class ="col-md-8">    
 {% if form.errors %}
 <p>Your username and password didn't match. Please try again.</p>
 {% endif %}
@@ -71,6 +81,9 @@
 <table>
 {{ form }}
 </table>
-<input type="submit" value="login" />
-<input type="hidden" name="next" value="{{ next }}" />
+          <button type="submit" class="btn pull-left btn-info">
+            Submit
+          </button>
+          <input type="hidden" name="next" value="{{ next }}" />
 </form>
+</div>
