--- a/freelancers/templates/your-item-list.html
+++ b/freelancers/templates/your-item-list.html
@@ -49,9 +49,9 @@
                 <li><a href="{% url "home" %}">Home</a></li>              
                   {% if user.is_authenticated %}
       <li><a href="{% url "item_upload" %}">Sell a new item</a></li> 
-      <li><a href="{% url "your-item-list" %}">View your store</a></li>                  
+      <li class="active"><a href="{% url "your-item-list" %}">View your store</a></li>                  
       <li><a href="{% url "item-list" %}">View items being sold</a></li>                                         
-      <li class="Active"><a href="{% url "posting-list" %}">View Posts</a></li>
+      <li><a href="{% url "posting-list" %}">View Posts</a></li>
       <li><a href="{% url "new-post" %}">Make a new Posting</a></li>                  
                   <li> <a href="{% url "user_logout" %}">Logout {{user}}</a></li>
                   {%else%}
@@ -68,20 +68,27 @@
     </div>
 
 
-    <div class="col-md-2">
+    <div class="col-md-5">
     </div>
-    <div class="col-md-8">
-<div class="page-header">
+    <div class="col-md-4">
+    <div class="page-header">
       <h3>
-        Search results
+        The items in your store:
       </h3>
     </div>
-      <ul class="list-group">
-{% for posting in Posts %}
-        <li class="list-group-item">
-          <span class="label label-info">By {{ posting.author }}: </span> 
-          <a href="{% url "post-detail" posting.id %}"> {{ posting.title }}</a>
-        </li>
-{% endfor %}
-      </ul>
+  {% for item in object_list %}
+  {% if item.author == user %}
+      <div class="panel pull-left panel-default">
+        <div class="panel-heading">
+        <a href="{% url "item-detail" item.id %}">
+             <img src="{{ item.pic.url }}" width="300" align="middle"></a>
+        </div>
+        <div class="panel-body">
+        <span class="label label-info">$ {{item.price}}</span>
+          {{ item.name }}
+        </div>
+        </div>
+    {% endif %}
+{% endfor %}	
 </div>
+ 
